[gd_scene load_steps=3 format=3 uid="uid://uf8tpt72ej8u"]

[ext_resource type="Script" uid="uid://cjmh018o18kbe" path="res://scripts/TopHUDController.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://4bau5mgcevqm" path="res://scenes/buttun_sounds.tscn" id="2_atui4"]

[node name="TopHUD" type="Panel"]
self_modulate = Color(0.2, 0.2, 0.2, 1)
custom_minimum_size = Vector2(0, 48)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 48.0
grow_horizontal = 2
script = ExtResource("1")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="LblMoney" type="Label" parent="HBox"]
layout_mode = 2
text = "₽ 1500"
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="HBox"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="LblDay" type="Label" parent="HBox"]
layout_mode = 2
text = "ДЕНЬ 0"
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="HBox"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="LblTime" type="Label" parent="HBox"]
layout_mode = 2
text = "14:12"
vertical_alignment = 1

[node name="Spacer3" type="Control" parent="HBox"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="LblRep" type="Label" parent="HBox"]
layout_mode = 2
text = "REP: 100"
vertical_alignment = 1

[node name="Spacer4" type="Control" parent="HBox"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Menu" type="HBoxContainer" parent="HBox"]
layout_mode = 2

[node name="BtnRecipes" type="Button" parent="HBox/Menu"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
focus_mode = 0
text = "Рецепты"

[node name="BtnUpgrades" type="Button" parent="HBox/Menu"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
focus_mode = 0
text = "Улучшения"

[node name="BtnStats" type="Button" parent="HBox/Menu"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
focus_mode = 0
text = "Статистика"

[node name="BtnMenu" type="Button" parent="HBox/Menu"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
focus_mode = 0
text = "Меню"

[node name="EffectsPopup" type="PopupPanel" parent="."]
size = Vector2i(200, 100)
borderless = false

[node name="VBox" type="VBoxContainer" parent="EffectsPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 196.0
offset_bottom = 96.0

[node name="LblTitle" type="Label" parent="EffectsPopup/VBox"]
layout_mode = 2
text = "Активные эффекты"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="EffectsPopup/VBox"]
layout_mode = 2

[node name="EffectsList" type="VBoxContainer" parent="EffectsPopup/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="ButtunSounds" parent="." instance=ExtResource("2_atui4")]
root_path = NodePath("..")
